fix items on safari

--- a/scss/_item_grid.scss
+++ b/scss/_item_grid.scss
@@ -72,7 +72,10 @@
   &-text {
     // display: none;
     position: absolute;
+    visibility: hidden;
+    // top: -200px;
     top: 0;
+
     left: 0;
     bottom: 0;
     right: 0;
@@ -109,12 +112,12 @@
 
 @keyframes text-fade-in {
   from {
-    display: none;
   }
 
   to {
-    display: block;
+    visibility: visible;
     opacity: 1;
+    // top: 0;
     transform: translateY(0);
   }
 }
